<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/input_ui" android:layout_width="wrap_content" android:layout_height="wrap_content" >
		<RelativeLayout android:id="@+id/Main_WeightLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingTop="10dp" android:paddingLeft="10dp">
			<TextView android:text="@string/weight" android:id="@+id/Main_WeightLabel" android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<TextView android:text="@string/spacer" android:id="@+id/Main_WeightSpacer" android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/Main_WeightLabel"/>
			<EditText android:id="@+id/Main_WeightEditText" android:inputType="numberDecimal" android:layout_width="wrap_content" android:minWidth="100dp" android:layout_height="wrap_content" android:layout_toRightOf="@id/Main_WeightSpacer"/>
		</RelativeLayout>
		<RelativeLayout android:id="@+id/Main_SizeLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="10dp" android:layout_below="@id/Main_WeightLayout">
			<TextView android:id="@+id/Main_SizeLabel" android:text="@string/size" android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
			<TextView android:text="@string/spacer" android:id="@+id/Main_SizeSpacer" android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/Main_SizeLabel"/>
			<EditText android:id="@+id/Main_SizeEditText" android:inputType="numberDecimal" android:minWidth="100dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/Main_SizeSpacer"/>
		</RelativeLayout>
		<RelativeLayout android:id="@+id/Main_DatePickerLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="10dp" android:layout_below="@id/Main_SizeLayout">
			<TextView android:text="@string/date" android:id="@+id/Main_DatePickerLabel" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
			<TextView android:text="@string/spacer" android:id="@+id/Main_DatePickerSpacer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/Main_DatePickerLabel"/>
			<DatePicker android:id="@+id/Main_DatePicker" android:paddingLeft="10dp" android:spinnersShown="true" android:calendarViewShown="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/Main_DatePickerSpacer"/>
		</RelativeLayout>
		<Button android:layout_height="wrap_content" android:text="@string/save"  android:layout_marginBottom="5dip" android:layout_width="fill_parent" android:id="@+id/Main_WeightSubmitButton" android:layout_below="@+id/Main_DatePickerLayout"/>
		<View android:id="@+id/Main_Spacer" android:layout_height="1dip" android:background="@color/honeycombish_blue" android:layout_width="fill_parent" android:layout_below="@id/Main_WeightSubmitButton"/>
		<RelativeLayout android:id="@+id/Main_WeightLogsLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/Main_Spacer">
			<TextView android:text="" android:id="@+id/Main_WeightLogs" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentRight="true" android:paddingRight="5dp"/>
			<TextView android:id="@+id/Main_WeightLogsLabel" android:text="@string/weightLogs" android:layout_height="wrap_content" android:paddingLeft="5dp" android:paddingBottom="5dp" android:paddingRight="5dp" android:layout_width="wrap_content" android:layout_alignParentLeft="true" android:layout_toLeftOf="@id/Main_WeightLogs"/>
		</RelativeLayout>
		<RelativeLayout android:id="@+id/Main_LastWeightLogsLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/Main_WeightLogsLayout">
			<TextView android:text="" android:id="@+id/Main_LastWeightLog" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentRight="true" android:paddingRight="5dp"/>
			<TextView android:id="@+id/Main_LastWeightLogLabel" android:text="@string/lastWeightLog" android:paddingLeft="5dip" android:paddingRight="5dip" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentLeft="true" android:layout_toLeftOf="@id/Main_LastWeightLog"/>
		</RelativeLayout>
</RelativeLayout>